Fix horizontal scrolling issue

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -147,28 +147,37 @@ a {
   padding: 0.2em 0;
 }
 
+.middle-container {
+  overflow: hidden;
+  margin-left: 15px;
+  margin-right: 15px;
+}
+
 .middle-main {
   background: #000000;
-  overflow: hidden;
   zoom: 1;
   min-height: 90%;
   max-height: 90%;
   max-width: 33%;
   padding-top: 4vh;
-  padding-left: 5vw;
+  padding-left: 1vw;
+  padding-right: 0px;
 }
 
 .middle-video-container {
-  //  background: #FF00FF no-repeat url(../images/DreamSmall.gif) right;
   max-height: 80vh;
   max-width: 66%;
   padding-top: 4vh;
-  overflow: hidden;
 }
 
 video {
   max-width: 960px;
   max-height: 540px;
+  overflow: hidden;
+}
+
+videogular {
+  overflow: hidden;
 }
 
 videogular vg-overlay-play {
